Agregando la seccion del hospedaje y las cosas por hacer

--- a/index.html
+++ b/index.html
@@ -29,8 +29,87 @@
                     <input type="text" name="busqueda" class="busqueda" placeholder="New York, Londes, Roma, Guadalajara">
                     <input type="submit" value="Buscar">
                 </form>
-            </div><!--Contenido-hero-->
-        </div><!--hero-->
+            </div>
+            <!--Contenido-hero-->
+        </div>
+        <!--hero-->
+        <main class="contenedor contenido">
+            <section class="hacer">
+                <h2>Que Hacer</h2>
+                <div class="contenedor-cards">
+                    <div class="cards">
+                        <img src="img/hacer1.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria concierto">concierto</p>
+                            <p class="titulo">Music Electronica 2021</p>
+                            <p class="precio">$1,200 por persona</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/hacer2.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria concierto">concierto</p>
+                            <p class="titulo">Rock en Los Ángeles</p>
+                            <p class="precio">$300 por persona</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/hacer3.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria clase">clase cocina</p>
+                            <p class="titulo">Comida Española para Principiantes</p>
+                            <p class="precio">$400 por persona</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/hacer4.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria paseo">paseo en bici</p>
+                            <p class="titulo">Paseo en las Motañas</p>
+                            <p class="precio">$200 por persona</p>
+                        </div>
+                    </div>
+                </div>
+            </section><!--Que hacer-->
+            <section class="modulo">
+                <h2>Presentamos Miviaje.com Plus</h2>
+                <div class="contenedor-cards premium">
+                    <div class="info">
+                        <h3>Una nueva sección de alojamientos de lujo</h3>
+                        <a href="#" class="boton">Explorar Alojamientos</a>
+                    </div>
+                </div>
+            </section>
+            <section class="hospedaje">
+                <h2>Hospedaje</h2>
+                <div class="contenedor-cards">
+                    <div class="cards">
+                        <img src="img/hospedaje1.jpg">
+                        <div class="info">
+                            <p class="categoria hospedaje">casa completa-2 camas</p>
+                            <p class="titulo">Casa completa con todos los servicios y 2 recamaras</p>
+                            <p class="precio">$3,200 por noche</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/hospedaje2.jpg">
+                        <div class="info">
+                            <p class="categoria hospedaje">1 cuarto con 2 camas</p>
+                            <p class="titulo">1 Cuarto con 2 camas y alberca</p>
+                            <p class="precio">$2,200 por noche</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/hospedaje3.jpg">
+                        <div class="info">
+                            <p class="categoria hospedaje">cabaña completa-4 camas</p>
+                            <p class="titulo">Cabaña en Bosque para 6 personas</p>
+                            <p class="precio">$2,500 por noche</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <script src="js/scripts.js"></script>
     </body>
