Agregando la seccion de destinos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                         </div>
                     </div>
                 </div>
-            </section><!--Que hacer-->
+            </section>
+            <!--Que hacer-->
             <section class="modulo">
                 <h2>Presentamos Miviaje.com Plus</h2>
                 <div class="contenedor-cards premium">
@@ -109,8 +110,75 @@
                     </div>
                 </div>
             </section>
+            <section class="destinos modulo">
+                <h2>Destinos Populares</h2>
+                <div class="contenedor-cards">
+                    <div class="cards">
+                        <img src="img/populares1.jpg">
+                        <div class="info">
+                            <p class="titulo">Austria</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/populares2.jpg">
+                        <div class="info">
+                            <p class="titulo">Francia</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/populares3.jpg">
+                        <div class="info">
+                            <p class="titulo">Grecia</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/populares4.jpg">
+                        <div class="info">
+                            <p class="titulo">Inglaterra</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="hacer">
+                <h2>Que Hacer en New York</h2>
+                <div class="contenedor-cards">
+                    <div class="cards">
+                        <img src="img/newyork1.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria clase">clase</p>
+                            <p class="titulo">Comida Japonesa para Principiantes</p>
+                            <p class="precio">$300 por persona</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/newyork2.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria concierto">concierto</p>
+                            <p class="titulo">Festival EDM 2021</p>
+                            <p class="precio">$1,200 por persona</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/newyork3.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria clase">clase de cocina</p>
+                            <p class="titulo">Paella Dominicana</p>
+                            <p class="precio">$200 por persona</p>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img src="img/newyork4.jpg" alt="">
+                        <div class="info">
+                            <p class="categoria paseo">paseos</p>
+                            <p class="titulo">Paseo a Caballo</p>
+                            <p class="precio">$100 por persona</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-
+    }
         <script src="js/scripts.js"></script>
     </body>
+
 </html>
