Agregando la seccion del footer y sus estilos

--- a/index.html
+++ b/index.html
@@ -177,7 +177,69 @@
                 </div>
             </section>
         </main>
-    }
+        <footer class="footer" id="footer">
+            <div class="contenedor-cards contenedor">
+                <div class="nav-footer">
+                    <h3>Miviaje.com</h3>
+                    <nav class="menu">
+                        <a href="#">Empleo</a>
+                        <a href="#">Prensa</a>
+                        <a href="#">Politicas</a>
+                        <a href="#">Ayuda</a>
+                    </nav>
+                </div>
+                <!--nav-footer-->
+                <div class="nav-footer">
+                    <h3>Descrubre Miviaje.com</h3>
+                    <nav class="menu">
+                        <a href="#">Confianza y Seguridad</a>
+                        <a href="#">Crédito de Viajero</a>
+                        <a href="#">AirBNB Citizen</a>
+                        <a href="#">Viaje de Negocios</a>
+                    </nav>
+                </div>
+                <!--nav-footer-->
+                <div class="nav-footer">
+                    <h3>Hospedaje</h3>
+                    <nav class="menu">
+                        <a href="#">Razones para Hospedar</a>
+                        <a href="#">Hospitalidad</a>
+                        <a href="#">Ser un anfitrión responsable</a>
+                        <a href="#">Centro de la Comunidad</a>
+                    </nav>
+                </div>
+                <!--nav-footer-->
+                <div class="nav-footer">
+                    <div class="sociales">
+                        <ul>
+                            <li>
+                                <a href="https://facebook.com" target="_blank">
+                                    <span>Facebook</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com" target="_blank">
+                                    <span>Twitter</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://instagram.com" target="_blank">
+                                    <span>Instagram</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <nav class="menu">
+                        <a href="#">Razones para Hospedar</a>
+                        <a href="#">Hospitalidad</a>
+                        <a href="#">Ser un anfitrión responsable</a>
+                        <a href="#">Centro de la Comunidad</a>
+                    </nav>
+                </div>
+                <!--nav-footer-->
+            </div>
+        </footer>
+        <a href="#" class="btn-flotante">Idioma y Moneda</a>
         <script src="js/scripts.js"></script>
     </body>
 
